syntax = "proto3";

package lapp;

option java_package = "nl.wvdzwan.lapp.protobuf";
option java_outer_classname = "Lapp";

message Method {
    string namespace = 1;
    string symbol = 2;
    string artifact = 3;

    map<string, string> metadata = 4;
}

message Call {
    Method source = 1;
    Method target = 2;

    enum CallType {
        UNKNOWN = 0;
        INTERFACE = 1;
        VIRTUAL = 2;
        SPECIAL = 3;
        STATIC = 4;
    }
    CallType callType = 3;
}

message ChaRelation {
    Method subject = 1;
    Method related = 2;

    enum RelationType {
        UNKNOWN = 0;
        OVERRIDE = 1;
        IMPLEMENTS = 2;
    }

    RelationType type = 3;
}

message Artifact {
    string group = 1;
    string name = 2;
    string version = 3;
}

message Package {
    repeated Artifact artifacts = 1;

    repeated Method methods = 3;

    repeated Call resolvedCalls = 4;
    repeated Call unresolvedCalls = 5;

    repeated ChaRelation cha = 6;
    repeated ChaRelation unresolvedCha = 7;

    map<string, string> metadata = 8;
}